# face-verification-service

./: .editorconfig  .flake8  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json  docker-compose.yml
.devcontainer/app/: post-start.sh
helm/face-service-pompeeva/: Chart.yaml  values.yaml
helm/face-service-pompeeva/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  service.yaml
k8s/: alembic-job.yaml  configmap.yaml  deployment.yaml  secret.yaml  service.yaml
src/app/: config.py  database.py  main.py
src/app/consumer/: consumer.py
src/app/core/: service.py
src/app/crud/: face_verification.py
src/app/endpoints/: endpoints.py
src/app/models/: face_verification_models.py
src/migration/: env.py
src/migration/versions/: 2223470f43e9_.py  2a0d963e527e_.py  a911dde905c7_.py
src/tests/unit/: test_main.py  test_service.py
src/tests/unit/consumer/: test_consumer.py
