[tool.poetry]
name = "workspace"
version = "0.1.0"
description = ""
authors = ["Nikita Renjov <n.renjov@cft.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
h5py = "^3.11.0"
tensorflow = "^2.15.0"
deepface = "^0.0.92"
tf-keras = "^2.15.0"
mypy = "^1.10.1"
black = "^24.4.2"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
aiokafka = "^0.11.0"
brotli = "^1.1.0"
python-dotenv = "^1.0.1"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.23.8"
anyio = "^4.4.0"
alembic = "^1.13.2"
sqlalchemy = "^2.0.32"
asyncpg = "^0.29.0"
psycopg = "^3.2.1"
psycopg-binary = "^3.2.1"

[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.19.2"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
 asyncio_mode = "auto"
